--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "dagrers"
 version = "0.1.0"
 edition = "2024"
 license = "PolyForm Noncommercial License 1.0.0"
-license-file = "LICENSE.txt"
+license-file = "LICENSE.md"
 readme = "README.md"
 description = "Hierarchical Layout Calculation for directed graphs"
 authors = ["Jan Arends <kontakt@jaads.de>"]
